tests/invalid/definite/IntDiv_Invalid_1.whiley
void f(int x, int y) where y >= 0:
     x = x / y
